<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />


    </group>



    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/action_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />

            </group>

        </menu>

    </item>

    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/share"/>

            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate_us"
                android:icon="@drawable/rateus"/>

        </menu>

    </item>


</menu>