<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="390dp"
    android:layout_margin="16dp"
    android:background="@drawable/card_bg">


    <ImageView
        android:id="@+id/hotel_image"
        android:layout_width="172dp"
        android:layout_height="183dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hotel1" />

    <TextView
        android:id="@+id/hotel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/grand_bay_hotel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="61dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/india"
        app:layout_constraintStart_toStartOf="@+id/hotel_name"
        app:layout_constraintTop_toBottomOf="@+id/hotel_name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/from_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/place_name"
        app:layout_constraintTop_toBottomOf="@+id/place_name"
        app:layout_constraintVertical_bias="0.327" />
</androidx.constraintlayout.widget.ConstraintLayout>